# zeroclaw-dbi

./: .env.example  .gitignore  CLAUDE.md
.claude/: settings.local.json
.claude/rules/: identity.md  postgres.md
.cursor/rules/: azure-functions.mdc  development-rules.mdc  dirtybird-azure-identity.mdc  dirtybird-context.mdc  dirtybird-git-identity.mdc  docker-acr.mdc  flask-django.mdc  n8n.mdc  no-long-inline-scripts.mdc  postgres-sql.mdc  self-healing-protocol.mdc  web-scraping.mdc  woocommerce.mdc  workspace-root-inheritance.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: zeroclaw-vm-deploy.md
bootstrap/: IDENTITY.md  SOUL.md  TOOLS.md  USER.md
dbi/: pyproject.toml  requirements.txt
docs/dbi/: README.md  ZeroClawPOC.md  architecture.md  dbi-azure-naming-conventions.md  deployment-agent-prompt.md  deployment-plan.md  prompt-vm-deployment-plan.md  runbook.md  security.md  user-guide.md
infra/: Caddyfile  config.toml.template  deploy.sh  load-secrets.sh  teams-adapter.service  vm-setup.sh  zeroclaw.service
infra/teams-app/: manifest.json
python/dbi_zero_claw/: __init__.py
python/email_bridge/: bridge.py
python/teams_adapter/: __init__.py  app.py  bot.py  config.py  zeroclaw_client.py
python/tests/: test_dbi_init.py
