[project]
name = "dbi-zero-claw"
version = "0.1.0"
description = "Dirtybird Industries - dbi-zero-claw"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "botbuilder-core>=4.14.0",
    "botbuilder-integration-aiohttp>=4.14.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["../python"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["../python/tests"]
pythonpath = ["../python"]
